# path

./: CMakeLists.txt  README.md
.github/workflows/: path-cross-platform-ci.yml  path-strict-ci.yml
cmake/: vix_pathConfig.cmake.in
examples/: filename.cpp  join.cpp  normalize.cpp  relative.cpp
include/vix/path/: Absolute.hpp  Basename.hpp  Dirname.hpp  Extension.hpp  Filename.hpp  HasExtension.hpp  IsAbsolute.hpp  IsRelative.hpp  Join.hpp  LexicallyNormal.hpp  LexicallyProximate.hpp  LexicallyRelative.hpp  Normalize.hpp  Parent.hpp  Path.hpp  PathError.hpp  PathOptions.hpp  PathParts.hpp  PathResult.hpp  Relative.hpp  ReplaceExtension.hpp  Separator.hpp  Split.hpp  Stem.hpp
src/: Absolute.cpp  Basename.cpp  Dirname.cpp  Extension.cpp  Filename.cpp  HasExtension.cpp  IsAbsolute.cpp  IsRelative.cpp  Join.cpp  LexicallyNormal.cpp  LexicallyProximate.cpp  LexicallyRelative.cpp  Normalize.cpp  Parent.cpp  Relative.cpp  ReplaceExtension.cpp  Separator.cpp  Split.cpp  Stem.cpp
test/: CMakeLists.txt  path_test.cpp
